--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,7 +6,7 @@ server.servlet.session.timeout=60m
 
 #DB configurations
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ncpl-sales-test?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ncpl-sales-test?sessionVariables=sql_mode='NO_ENGINE_SUBSTITUTION'&jdbcCompliantTruncation=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root
 #spring.datasource.password=ERPpassword@123#
